Generate XML rules

--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,5 @@
 wikiLink=https://wiki.copart.com/pages/viewpage.action?spaceKey=CFI&title=Assignment+-+Entered
 wikiUserName=
 wikiPassword=
+
+deRulesXML=/src/main/java/org/copart/cyp/rules/DE/deRulesXML.xml
